--- a/Resources/Private/Templates/FormResults/Index.html
+++ b/Resources/Private/Templates/FormResults/Index.html
@@ -45,12 +45,12 @@
 				class="form-inline form-inline-spaced">
 		<div class="form-group">
 			<label for="filter-search">
-				<f:translate key="LLL:EXT:aus_project/Resources/Private/Language/locallang_db.xlf:form.filter.formName"/>
+				<f:translate key="LLL:EXT:form_to_database/Resources/Private/Language/locallang_be.xlf:index.filter.form_name"/>
 			</label>
 			<input type="text" id="filter-search" class="form-control input-sm" name="filter[search]" value="{nameSearched}"/>
 		</div>
 		<div class="form-group">
-			<input type="submit" value="{f:translate(key: 'LLL:EXT:aus_project/Resources/Private/Language/locallang_db.xlf:form.filter.searchButton')}" class="btn btn-default btn-sm"/>
+			<input type="submit" value="{f:translate(key: 'LLL:EXT:form_to_database/Resources/Private/Language/locallang_be.xlf:index.filter.search_button')}" class="btn btn-default btn-sm"/>
 		</div>
 	</form>
 </f:section>
