--- a/Resources/Private/Templates/FormResults/Show.html
+++ b/Resources/Private/Templates/FormResults/Show.html
@@ -29,7 +29,7 @@
 <f:section name="filter">
 	<f:form action="show" class="form-inline form-inline-spaced">
 		<div class="form-group">
-			<f:be.labels.csh field="formResult_start" label="{f:translate(key: 'LLL:EXT:aus_project/Resources/Private/Language/locallang_db.xlf:formResults.filter.dateStart')}"/>
+			<f:be.labels.csh field="formResult_start" label="{f:translate(key: 'LLL:EXT:form_to_database/Resources/Private/Language/locallang_be.xlf:show.filter.date_start')}"/>
 			<div class="form-control-wrap">
 				<div class="input-group">
 					<input name="filter[start]_hr" value="{startDateSearched}" class="form-control t3js-datetimepicker t3js-clearable" data-date-type="datetime" data-date-offset="0" type="text" id="tceforms-datetimefield-formResults_start_row">
@@ -39,7 +39,7 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<f:be.labels.csh label="{f:translate(key: 'LLL:EXT:aus_project/Resources/Private/Language/locallang_db.xlf:formResults.filter.dateEnd')}"/>
+			<f:be.labels.csh label="{f:translate(key: 'LLL:EXT:form_to_database/Resources/Private/Language/locallang_be.xlf:show.filter.date_end')}"/>
 			<div class="form-control-wrap">
 				<div class="input-group">
 					<input name="filter[end]_hr" value="{endDateSearched}" class="form-control t3js-datetimepicker t3js-clearable" data-date-type="datetime" data-date-offset="0" type="text" id="tceforms-datetimefield-formResults_end_row">
@@ -51,7 +51,7 @@
 		<div class="form-group">
 			<f:be.labels.csh table="{csh}" field="task_start" label=""/>
 			<div class="form-control-wrap">
-				<input type="submit" value="{f:translate(key: 'LLL:EXT:aus_project/Resources/Private/Language/locallang_db.xlf:form.filter.searchButton')}" class="btn btn-default btn-sm" />
+				<input type="submit" value="{f:translate(key: 'LLL:EXT:form_to_database/Resources/Private/Language/locallang_be.xlf:show.filter.search_button')}" class="btn btn-default btn-sm" />
 			</div>
 		</div>
 		<f:form.hidden name="formPersistenceIdentifier" value="{formPersistenceIdentifier}"/>
