--- a/Resources/Private/Templates/FormResults/Show.html
+++ b/Resources/Private/Templates/FormResults/Show.html
@@ -23,17 +23,17 @@
 			</f:be.infobox>
 		</f:else>
 	</f:if>
-	<f:render partial="FormResults/SimplePagination" arguments="{paginator:paginator, pagination:pagination, formPersistenceIdentifier: formResults.0.formPersistenceIdentifier}" />
+	<f:render partial="FormResults/SimplePagination" arguments="{paginator:paginator, pagination:pagination, formPersistenceIdentifier: formResults.0.formPersistenceIdentifier, startDateSearched: startDateSearched, endDateSearched: endDateSearched}" />
 	<f:render partial="FormResults/Show/Footer" arguments="{_all}"/>
 </f:section>
 <f:section name="filter">
-	<f:form action="show" class="form-inline form-inline-spaced">
+	<f:form action="show" arguments="{formPersistenceIdentifier: formPersistenceIdentifier}" class="form-inline form-inline-spaced">
 		<div class="form-group">
 			<f:be.labels.csh field="formResult_start" label="{f:translate(key: 'LLL:EXT:form_to_database/Resources/Private/Language/locallang_be.xlf:show.filter.date_start')}"/>
 			<div class="form-control-wrap">
 				<div class="input-group">
-					<input name="filter[start]_hr" value="{startDateSearched}" class="form-control t3js-datetimepicker t3js-clearable" data-date-type="datetime" data-date-offset="0" type="text" id="tceforms-datetimefield-formResults_start_row">
-					<input name="filter[start]" value="{startDateSearched}" type="hidden">
+					<input name="startDateSearched_hr" value="{startDateSearched}" class="form-control t3js-datetimepicker t3js-clearable" data-date-type="datetime" data-date-offset="0" type="text" id="tceforms-datetimefield-formResults_start_row">
+          <f:form.hidden name="startDateSearched" value="{startDateSearched}"/>
 					<span class="input-group-btn"><label class="btn btn-default" for="tceforms-datetimefield-formResults_start_row"><core:icon identifier="actions-edit-pick-date" /></label></span>
 				</div>
 			</div>
@@ -42,8 +42,8 @@
 			<f:be.labels.csh label="{f:translate(key: 'LLL:EXT:form_to_database/Resources/Private/Language/locallang_be.xlf:show.filter.date_end')}"/>
 			<div class="form-control-wrap">
 				<div class="input-group">
-					<input name="filter[end]_hr" value="{endDateSearched}" class="form-control t3js-datetimepicker t3js-clearable" data-date-type="datetime" data-date-offset="0" type="text" id="tceforms-datetimefield-formResults_end_row">
-					<input name="filter[end]" value="{endDateSearched}" type="hidden">
+					<input name="endDateSearched_hr" value="{endDateSearched}" class="form-control t3js-datetimepicker t3js-clearable" data-date-type="datetime" data-date-offset="0" type="text" id="tceforms-datetimefield-formResults_end_row">
+          <f:form.hidden name="endDateSearched" value="{endDateSearched}"/>
 					<span class="input-group-btn"><label class="btn btn-default" for="tceforms-datetimefield-formResults_end_row"><core:icon identifier="actions-edit-pick-date" /></label></span>
 				</div>
 			</div>
@@ -54,7 +54,6 @@
 				<input type="submit" value="{f:translate(key: 'LLL:EXT:form_to_database/Resources/Private/Language/locallang_be.xlf:show.filter.search_button')}" class="btn btn-default btn-sm" />
 			</div>
 		</div>
-		<f:form.hidden name="formPersistenceIdentifier" value="{formPersistenceIdentifier}"/>
 	</f:form>
 </f:section>
 </html>
